--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,7 @@ public_folder: /img
 
 collections:
   - name: dogs
+    identifier_field: name
     label: Dogs
     folder: dogs
     create: true
