--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.8.3",
     "gatsby": "^2.18.12",
     "gatsby-plugin-netlify-cms": "^4.1.34",
     "gatsby-source-filesystem": "^2.1.43",
