--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "gatsby": "^2.18.12",
+    "gatsby-plugin-google-analytics": "^2.1.34",
     "gatsby-plugin-netlify-cms": "^4.1.34",
     "gatsby-source-filesystem": "^2.1.43",
     "gatsby-transformer-remark": "^2.6.45",
